Fixed Font to be readable with larger screens

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -10,7 +10,7 @@ h1 {
   justify-content: center;
 }
 .cracked {
-  font-family: Coolvetica, Arial;
+  font-family: 'Libre Baskerville', serif;
   font-size: 15rem;
   color:#fff;
   text-transform: uppercase;
@@ -27,7 +27,7 @@ h1 {
    animation: 1s shake infinite alternate;
 }
 .cracked span:nth-child(2)  {
-  clip-path: polygon(10% 0%, 40% 0%, 80% 100%, 0% 100%);
+  clip-path: polygon(10% 0%, 100% 0%, 80% 100%, 0% 100%);
    animation: 1s shake infinite alternate;
 }
 .cracked span:nth-child(3) {
